--- a/templates/vlc/frontend/VLSMaker/index.html
+++ b/templates/vlc/frontend/VLSMaker/index.html
@@ -121,8 +121,7 @@
                     letter-spacing: -0.03em;
                     text-align: center;
                     margin-bottom: 40px">
-          {% include 'partials/back.html' %}
-
+<!-- partial bak was here -->
           <span> Create Your Perfect Video Creative:
             <br />
           Upload, Customize, and Convert!</span>
