--- a/templates/vlc/download.html
+++ b/templates/vlc/download.html
@@ -343,6 +343,7 @@
                     font-family: Montserrat;
                     font-size: 18px;
                     font-weight: 500;
+                    margin-bottom: -10px;
                     line-height: 21.94px;
                     text-align: left;
                     color: #864AF9;
