--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -717,7 +717,7 @@ function highlightNoSubclipIcons(button) {
         videoClip.value=''
 
         document.getElementById('currentFile').innerHTML= `Current File: ${liItem.dataset.current_file} 
-                    <i id="clearCurrentFile"  onclick="clearCurrentFile()" class="ri-close-circle-line"></i>
+                    <i id="clearCurrentFile" style="font-size:large;"  onclick="clearCurrentFile()" class="ri-close-circle-line"></i>
         
         `
 
