--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -825,7 +825,8 @@ function clearCurrentFile(){
 
 
                 } else {
-                    errorMessage.innerText = "Invalid highlighting. Highlight full words starting from the beginning.";
+                    // errorMessage.innerText = "Invalid highlighting. Highlight full words starting from the beginning.";
+                    errorMessage.innerText = "Highlighting Must Start From The First Word Of The Sentence.";
                 }
             }
 
