--- a/templates/accounts/verification.html
+++ b/templates/accounts/verification.html
@@ -72,9 +72,9 @@
         </div>
         <div class="content">
             <h2>Hi {{ first_name }},</h2>
-            <p>Your <span style="font-weight:600">VideoCrafter.io</span> account is live! You now have the tools to create high-converting Video Sales Letters in minutes.</p>
+            <p>Your <span style="font-weight:600">VideoCrafter.io</span> account is live! You now have the tools to create high-converting Video Adverts fast.</p>
             <p style="font-weight:600">Visit the link below to verify your email and get started.</p>
-            <a href="{{ verification_url }}" class="button">Verify Account</a>
+            <a href="{{ verification_url }}" style="color: white;" class="button">Verify Account</a>
             <p>Cheers,</p>
         </div>
         <div class="footer">
@@ -83,3 +83,5 @@
     </div>
 </body>
 </html>
+
+Your VideoCrafter.io account is live!
