--- a/templates/accounts/pricing_page.html
+++ b/templates/accounts/pricing_page.html
@@ -1,3 +1,4 @@
+{% include 'messages.html' %}
 <div class="plan-interval-selector">
     {% for plan in plans %}
       <button class="button">{{ plan.name }}</button>
