--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -191,7 +191,7 @@
     }
 
 function clearFileInput(){
-    document.getElementById('sile_file').value=''
+    document.getElementById('slide_file').value=''
     document.getElementById('clear-file').textContent=''
 
 }
