--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -193,6 +193,8 @@
 function clearFileInput(){
     document.getElementById('slide_file').value=''
     document.getElementById('clear-file').textContent=''
+    document.getElementById('upload-text').textContent=''
+
 
 }
 function subclipReset(clipID) {
