--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -192,7 +192,7 @@
 
 function clearFileInput(){
     document.getElementById('slide_file').value=''
-    document.getElementById('clear-file').textContent=''
+    document.getElementById('clear-file').style.display='none'
     document.getElementById('upload-text').textContent='Choose File'
 
 
