--- a/templates/vlc/download.html
+++ b/templates/vlc/download.html
@@ -511,7 +511,7 @@
           document.getElementById('downloadButton').addEventListener('click', function(event) {
             event.preventDefault(); // Prevent the default anchor behavior
 
-            if ('{{ request.user.subscription.plan.name }}' == 'Free') {
+            if ('{{ request.user.subscription.plan.name }}' == 'free') {
               document.querySelector('.plans-popup-container').classList.remove('hidden');
             } else {
               // Fetch the URL to start the download
