all done with videocrafter, praise God

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -879,7 +879,7 @@ function clearCurrentFile(){
 
                 } else {
                     // errorMessage.innerText = "Invalid highlighting. Highlight full words starting from the beginning.";
-                    errorMessage.innerText = "Highlighting Must Start From The First Word Of The Sentence.";
+                    errorMessage.innerText = "Highlighting Must Start From The First Unassigned Word Of The Sentence.";
                 }
             }
 
