untrunc docker setup

--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -648,7 +648,7 @@ function highlightNoSubclipIcons(button) {
                 } else {
                     const form = document.getElementById('processFile');
                     if (form) {
-                        button.disabled = true
+                        // button.disabled = true
 
                         form.submit();
                     } else {
