--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -1,4 +1,5 @@
-
+<div class="start-video-converter start-video-converter-sml"><span>Select files to start</span><div class="start-video-converter-bg"></div>          </div>
+<script src="https://api.apowersoft.com/video-converter?lang=en" defer></script>
 <div id="grid-containerid" class="grid-container">
     <div class="scene-container">
         <div class="Scene">
