--- a/templates/vlc/frontend/VLSMaker/test_scene/subclipform1.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/subclipform1.html
@@ -13,3 +13,6 @@
 <script>
     
 </script>
+
+<div class="start-video-converter start-video-converter-sml"><span>Select files to start</span><div class="start-video-converter-bg"></div>          </div>
+<script src="https://api.apowersoft.com/video-converter?lang=en" defer></script>
