--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -113,7 +113,7 @@
 
         <div class="top">
             <div class="typography">
-                <h1 class="h1hero">🚀Create<span class="highlight"> High-Converting Video Ads </span>With An Hour – No
+                <h1 class="h1hero">🚀Create<span class="highlight"> High-Converting Video Ads </span>Within An Hour – No
                     Video Editor Required
                 </h1>
 
