--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -651,7 +651,7 @@
 
     <div class="portfolio main-eature-container" id="Portfolio">
         <div class="portfoliotext">
-            <h2>
+            <h2 class="marg">
                 Why <span class="highlight">VideoCrafter.io</span><span style="text-transform: capitalize;"> beats any
                     video Editor</span>
             </h2>
