--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -113,7 +113,7 @@
 
         <div class="top">
             <div class="typography">
-                <h1 class="h1hero">🚀Create<span class="highlight"> High-Converting Video Ads </span>Within An Hour – No
+                <h1 class="h1hero"><span class="rocket">🚀</span>Create<span class="highlight"> High-Converting Video Ads </span>Within An Hour – No
                     Video Editor Required
                 </h1>
 
@@ -562,6 +562,7 @@
         <div class="hiw-heading-text">
             How <span class="highlight">VideoCrafter<span style="font-size: 16px;">.io</span> <span
                     style="color: #000000;">works:</span> <span class="an-span">works:</span>
+        <div class="hiw-element-placeholder  for-mobile" style="margin-top: 48px; margin-bottom: 32px;"></div>
         </div>
 
         <div class="hiw-container">
