--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -859,7 +859,7 @@
 
         <img src="https://vlsmlsaker.s3.amazonaws.com/assets/background/Ellipse%202.svg" alt=""
             class="cta-circle cc8" />
-        <div class="cta-content-wrapper">
+        <div class="cta-content-wrapper for-disp">
             <div class="cta-content">
                 <span class="cta-text">Try VideoCrafter.io FREE
                     <br />
@@ -873,15 +873,14 @@
         </div>
 
 
-        <div class="cta-main">
+        <div class="cta-main" style="background-color: white; z-index: 100;">
             <div class="cta-box">
-                <h1>Try VideoCrafter.io FREE
-                    No Credit Card Required</h1>
-                <p>Get hands-on with VideoCrafter.io and experience the speed and simplicity for yourself. Stop waiting.
-                    Start creating.</p>
+                <h1>Try VideoCrafter.io FREE<br>No Credit Card Required</h1>
+                <p>Get hands-on with VideoCrafter.io and experience the speed and simplicity for yourself. Stop waiting. Start creating.</p>
             </div>
-            <button class="cta-button">Get video Crafter Now</button>
+            <button class="cta-button">Get VideoCrafter Now</button>
         </div>
+        
 
     </div>
 
