--- a/static/landing/landing.css
+++ b/static/landing/landing.css
@@ -332,7 +332,7 @@
   .portfolio-box {
     width: 300px;
     margin: 0 auto;
-    height: 280px;
+    /* height: 280px; */
   }
 
   .portfolio-bottom-text {
@@ -417,6 +417,9 @@
     width: 300px;
     padding: 24px;
   }
+  .cta-content-wrapper {
+    display: none;
+  }
 
   .cta {
     background-color: #966ae728;
@@ -425,6 +428,9 @@
   }
 
   .cta-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centers content horizontally */
     background-color: #fff;
     border: 2px solid #cccccc;
     border-radius: 10px;
@@ -433,7 +439,7 @@
   }
 
   .cta-box {
-    width: 280px;
+    text-align: center;
   }
 
   .cta-box h1 {
@@ -456,6 +462,7 @@
     font-size: 16px;
     font-weight: 400;
     margin-top: 48px;
+    height: 48px;
   }
 
   .highlight-p {
